--- a/index.html
+++ b/index.html
@@ -335,10 +335,20 @@
             </div>
         </div>
     </section>
-    <footer style="background-color: rgb(27, 27, 27); color: #fff; display: flex; padding: 50px 0; font-size: 15px;">
-        <span class="m-auto" style="font-family: 'Playfair Display', serif !important;">&copy; 2020,
-            <span
-                style="color: var(--pink); font-family: 'Playfair Display', serif !important;">KirikgakureTbk.</span></span>
+    <footer>
+        <div class="container">
+            <div class="container">
+                <div class="row">
+                    <div class="col text-center">
+                        <a href="#">Kirigakure<span>Tbk.</span></a>
+                        <p>Adalah sebuah apartment yang didirikan sejak 2020, selalu melayani tamu walau permintaannya
+                            aneh-aneh.</p>
+                        <span style="font-family: 'Playfair Display', serif; font-size: 13px;">Copyright 2020. All
+                            Rights Reserved</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/popper.min.js"></script>
